# cv-fun

./: .gitignore  LICENSE  README.md  Taskfile.yml  app_bundle.go  app_bundle_darwin.go  app_bundle_test.go  app_bundle_unsupported.go  clipboard_history.go  clipboard_polling.go  clipboard_polling_test.go  clipboard_service.go  config_service.go  config_service_test.go  copy_listener_darwin.go  copy_listener_unsupported.go  copy_listener_windows.go  copy_monitor.go  copy_monitor_test.go  debug_log.go  debug_mode.go  dock_darwin.go  dock_unsupported.go  go.mod  history_service.go  history_service_test.go  index.html  main.go  package-lock.json  package.json  system_clipboard_darwin.go  system_clipboard_unsupported.go  system_clipboard_windows.go  tray.go  tray_lifecycle_test.go
.github/workflows/: release.yml
.task/checksum/: darwin-common-generate-icons  (+3 more)
docs/: cv-fun-clipboard-assistant-plan.md  ntools-clipboard-assistant-plan.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
plugin-examples/: README.md
src/: App.vue  PastePopup.vue  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: macos_ocr.h  macos_ocr.m
src-tauri/src/: append_copy.rs  commands.rs  config.rs  lib.rs  main.rs  ocr.rs  paste_popup.rs  watcher.rs
src-tauri/src/history/: mod.rs  store.rs
src-tauri/src/plugins/: ecdict.rs  manifest.rs  mod.rs  ocr_plugin.rs  registry.rs  runner.rs  samples.rs  translate.rs
tools/: generate_app_icon.go  generate_tray_icon.go
(+86 files in other folders)
