[package]
name = "nfun-cv"
version = "0.1.0"
description = "FunCV - 本地优先剪贴板历史与内容分析"
authors = ["NFUN"]
edition = "2021"

[lib]
name = "nfun_cv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
arboard = "3"
sha2 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "stream"] }
csv = "1"
walkdir = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
